# quickmcp

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
mcp_template/: cookiecutter.json
mcp_template/src/{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/: README.md
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: mcp.py  server.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/resources/: __init__.py  example_resource.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/tools/: __init__.py  example_tool.py
