[project]
name = "quickmcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordan Morgan",email = "jordan.morgan999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
]

[tool.poetry]
packages = [{include = "quickmcp", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
