[project]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [
    {name = "{{cookiecutter.author}}",email = "{{cookiecutter.email}}"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastmcp>=2.10.5",
    "uvicorn>=0.35.0",
    "starlette (>=0.47.1,<0.48.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"